--- a/app.json
+++ b/app.json
@@ -34,7 +34,12 @@
             "value": ""
             }
     },
-    
+    "addons": [],
+    "buildpacks": [
+        {
+            "url": "heroku/python"
+        }
+    ],
     "formation": {
         "worker": {
             "quantity": 1,
