--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ pymongo[srv]==3.11.4
 motor==2.4.0
 marshmallow==3.12.2
 umongo==3.0.0
-# test
-requests
+#test
 parse-torrent-name
 #index
 pyromod
 #for check 
 requests
 bs4
+imdbpy
