--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,12 @@ bs4
 imdbpy
 telegraph
 aiofiles
+wikipedia
 #for song#YTDL
 wget #this not important delaye after check song.py
 aiohttp[speedups]
 youtube_dl
+
 
 youtube_search_python
 yt_dlp
