--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ wikipedia
 wget #this not important delaye after check song.py
 aiohttp[speedups]
 youtube_dl
-
+heroku3
 #______for file store check___________
 psycopg2-binary
 
