--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/hockbhmv/pyrogram@inline-m
+git+https://github.com/hockbhmv/pyrogram-1@inline-m
 tgcrypto==1.2.2
 pymongo[srv]==3.11.4
 motor==2.4.0
